cmake_minimum_required(VERSION 3.5)
project(ModelMUSB)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    ModelMUSB/ModelMUSB/src/ASF/common/boards/board.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sam3x/genclk.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sam3x/osc.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sam3x/pll.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sam3x/sysclk.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sam3x/sysclk.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/genclk.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/osc.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/pll.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/clock/sysclk.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/gpio/sam_gpio/sam_gpio.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/gpio/gpio.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/ioport/sam/ioport_pio.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/ioport/ioport.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/sleepmgr/sam/sleepmgr.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/sleepmgr/sam/sleepmgr.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/sleepmgr/sleepmgr.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/kbd/udi_hid_kbd.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/kbd/udi_hid_kbd.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/kbd/udi_hid_kbd_conf.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/kbd/udi_hid_kbd_desc.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/udi_hid.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/device/udi_hid.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/class/hid/usb_protocol_hid.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/udc/udc.c
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/udc/udc.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/udc/udc_desc.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/udc/udd.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/udc/udi.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/usb_atmel.h
    ModelMUSB/ModelMUSB/src/ASF/common/services/usb/usb_protocol.h
    ModelMUSB/ModelMUSB/src/ASF/common/utils/interrupt/interrupt_sam_nvic.c
    ModelMUSB/ModelMUSB/src/ASF/common/utils/interrupt/interrupt_sam_nvic.h
    ModelMUSB/ModelMUSB/src/ASF/common/utils/interrupt.h
    ModelMUSB/ModelMUSB/src/ASF/common/utils/parts.h
    ModelMUSB/ModelMUSB/src/ASF/sam/boards/arduino_due_x/arduino_due_x.h
    ModelMUSB/ModelMUSB/src/ASF/sam/boards/arduino_due_x/init.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pio/pio.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pio/pio.h
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pio/pio_handler.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pio/pio_handler.h
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pmc/pmc.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pmc/pmc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pmc/sleep.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/pmc/sleep.h
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/uotghs/uotghs_device.c
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/uotghs/uotghs_device.h
    ModelMUSB/ModelMUSB/src/ASF/sam/drivers/uotghs/uotghs_otg.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_adc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_can.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_chipid.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_dacc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_dmac.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_efc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_emac.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_gpbr.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_hsmci.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_matrix.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_pdc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_pio.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_pmc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_pwm.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_rstc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_rtc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_rtt.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_sdramc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_smc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_spi.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_ssc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_supc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_tc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_trng.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_twi.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_uart.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_uotghs.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_usart.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/component/component_wdt.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_adc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_can0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_can1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_chipid.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_dacc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_dmac.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_efc0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_efc1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_emac.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_gpbr.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_hsmci.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_matrix.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_pioa.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_piob.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_pioc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_piod.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_pioe.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_piof.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_pmc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_pwm.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_rstc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_rtc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_rtt.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_sdramc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_smc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_spi0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_spi1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_ssc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_supc.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_tc0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_tc1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_tc2.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_trng.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_twi0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_twi1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_uart.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_uotghs.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_usart0.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_usart1.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_usart2.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_usart3.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/instance/instance_wdt.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3a4c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3a8c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3x4c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3x4e.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3x8c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3x8e.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/pio/pio_sam3x8h.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3a4c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3a8c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3x4c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3x4e.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3x8c.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3x8e.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3x8h.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/include/sam3xa.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/source/templates/gcc/startup_sam3x.c
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/source/templates/exceptions.c
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/source/templates/exceptions.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/source/templates/system_sam3x.c
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/cmsis/sam3x/source/templates/system_sam3x.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/header_files/io.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/preprocessor/mrepeat.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/preprocessor/preprocessor.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/preprocessor/stringz.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/preprocessor/tpaste.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/syscalls/gcc/syscalls.c
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/compiler.h
    ModelMUSB/ModelMUSB/src/ASF/sam/utils/status_codes.h
    ModelMUSB/ModelMUSB/src/ASF/thirdparty/CMSIS/Include/arm_common_tables.h
    ModelMUSB/ModelMUSB/src/ASF/thirdparty/CMSIS/Include/arm_const_structs.h
    ModelMUSB/ModelMUSB/src/ASF/thirdparty/CMSIS/Include/core_cm3.h
    ModelMUSB/ModelMUSB/src/ASF/thirdparty/CMSIS/Include/core_cmFunc.h
    ModelMUSB/ModelMUSB/src/ASF/thirdparty/CMSIS/Include/core_cmInstr.h
    ModelMUSB/ModelMUSB/src/config/conf_board.h
    ModelMUSB/ModelMUSB/src/config/conf_clock.h
    ModelMUSB/ModelMUSB/src/config/conf_sleepmgr.h
    ModelMUSB/ModelMUSB/src/config/conf_usb.h
    ModelMUSB/ModelMUSB/src/asf.h
    ModelMUSB/ModelMUSB/src/keys.h
    ModelMUSB/ModelMUSB/src/main.c
    .gitattributes
    .gitignore)

add_executable(ModelMUSB ${SOURCE_FILES})